@@ -42,11 +42,10 @@ set_board_info ldscript "-Tsim.ld"
 # The simulator doesn't return exit statuses and we need to indicate this
 # the standard GCC wrapper will work with this target.
 set_board_info needs_status_wrapper  1
-# Doesn't pass arguments or handle signals, 
+# Doesn't pass arguments or handle signals,
 # Can return results.
 # Does do inferiorio.
 set_board_info noargs 1
 set_board_info gcc,no_trampolines 1
 set_board_info gcc,no_label_values 1
 set_board_info gdb,nosignals 1
-
