@@ -55,4 +55,3 @@ set_board_info gdb,timeout 60
 # Used by a few gcc.c-torture testcases to delimit how large the stack can
 # be.
 set_board_info gcc,stack_size  5000
-
