@@ -1,5 +1,10 @@
 2020-05-20 Jacob Bachmeyer <jcb62281+dev@gmail.com>
 
+    * baseboards/{aarch64-sim, arm-ice, arm-sim, basic-sid, iq2000-sim,
+    mn10300-sim, moxie-sim}.exp: Cleanup up whitespace.
+
+2020-05-20 Jacob Bachmeyer <jcb62281+dev@gmail.com>
+
 	* lib/target.exp (default_target_compile): Use "host_info"
 	procedure to probe for a host configuration, instead of checking a
 	local empty target_info array due to lacking "global target_info".
